--- a/DataDrivenFramework/.classpath
+++ b/DataDrivenFramework/.classpath
@@ -22,6 +22,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources/properties">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
