--- a/PageObjectModelBasics/.classpath
+++ b/PageObjectModelBasics/.classpath
@@ -22,6 +22,10 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources/com/pol/properties">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
