--- a/PageObjectModelBasics/pom.xml
+++ b/PageObjectModelBasics/pom.xml
@@ -53,6 +53,16 @@
     <version>4.1.0</version>
 </dependency>
   
+ <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>6.14.3</version>
+    <scope>compile</scope>
+</dependency>
+
+  
+  
   
   
    <!-- Dependency for POI API -->
@@ -100,11 +110,11 @@
   <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.22.1</version>
                 <configuration>
                     <testFailureIgnore> false </testFailureIgnore>
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/runner/testng.xml</suiteXmlFile>
+                        <suiteXmlFile>src/test/resources/com/pol/runner/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>            
                 </plugin>                        
@@ -112,7 +122,7 @@
         
         	<testResources>
       <testResource>
-        <directory>src/test/resources/properties</directory>
+        <directory>src/test/resources/com/pol/properties</directory>
         <includes>
           <include>log4j.properties</include>
         </includes>
