--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"D:\\Projects\\Frameworks-Architect\\CucumberBasics\\jars\\cucumber-core-1.2.5.jar","type":"JAR","hints":{}},"info.cukes:cucumber-core:1.2.5"],[{"location":"D:\\Projects\\Frameworks-Architect\\CucumberBasics\\jars\\selenium\\selenium-server-standalone-3.4.0.jar","type":"JAR","hints":{}},"org.yaml.snakeyaml:org.yaml.snakeyaml:1.15.0"],[{"location":"C:\\Program Files\\Java\\jdk1.8.0_91","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
