--- a/CucumberPageObjects/pom.xml
+++ b/CucumberPageObjects/pom.xml
@@ -61,4 +61,23 @@
 
 
   </dependencies>
+  
+  
+  <build>
+  <plugins> 
+  <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <testFailureIgnore> false </testFailureIgnore>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/runner/testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>            
+                </plugin>                        
+        </plugins>
+        
+		
+    </build>
 </project>
