--- a/PageObjectExtended/pom.xml
+++ b/PageObjectExtended/pom.xml
@@ -20,12 +20,13 @@
 </dependency>
  
 
-<!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
-    <groupId>com.relevantcodes</groupId>
+    <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
-    <version>2.41.2</version>
+    <version>3.1.5</version>
 </dependency>
+
 
 
   <!-- https://mvnrepository.com/artifact/log4j/log4j -->
