--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"D:\\Projects\\Frameworks-Architect\\PageObjectExtended","type":"PROJECT","hints":{"PROJECT_NAME":"PageObjectExtended"}},"com.pol:PageObjectExtended:0.0.1"]]
+[[{"location":"C:\\Users\\selenium\\.m2\\repository\\org\\seleniumhq\\selenium\\selenium-api\\3.4.0\\selenium-api-3.4.0.jar","type":"JAR","hints":{}},"ABSENT"]]
