--- a/CucumberBDDParallel/pom.xml
+++ b/CucumberBDDParallel/pom.xml
@@ -21,13 +21,17 @@
     <scope>test</scope>
 </dependency>
 
- <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
 <dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-    <version>6.14.3</version>
-    <scope>compile</scope>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>4.2.0</version>
 </dependency>
+
+
+
+
+ 
 
 
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -76,13 +80,13 @@
     <scope>provided</scope>
 </dependency>
 
-
-
   </dependencies>
   
   <build>
 <plugins>
-    
+   
+   
+                                    <!--   
     <plugin>
       <groupId>com.github.temyers</groupId>
       <artifactId>cucumber-jvm-parallel-plugin</artifactId>
@@ -104,7 +108,7 @@
 		  </execution>
 		  </executions>
 		  </plugin>
-		  
+		                              
    <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
@@ -118,9 +122,19 @@
          </includes>
       </configuration>
     </plugin>
-    
-    
-  </plugins>
+                                                   -->
+    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <testFailureIgnore> false </testFailureIgnore>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/runner/testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>            
+                </plugin>                        
+        </plugins>
   </build>
   
   
