Cucumber Parallel With PageObjects

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"D:\\Projects\\Frameworks-Architect\\CucumberParallelWithPageObjects","type":"PROJECT","hints":{"PROJECT_NAME":"CucumberParallelWithPageObjects"}},"com.Jena:CucumberParallelWithPageObjects:0.0.1"]]
